kubernetes/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: ollama-chatbot
  name: ollama-chatbot
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ollama-chatbot
  serviceName: ollama-chatbot
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ollama-chatbot
    spec:
      containers:
      - args:
        - ollama serve
        command:
        - sh
        - -c
        image: ghcr.io/eumel8/ollama-chatbot/ollama:latest
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - "sh"
            - "-c"
            - "test -d /home/appuser/.ollama"
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: ollama
        readinessProbe:
          exec:
            command:
            - "sh"
            - "-c"
            - "test -d /home/appuser/.ollama"
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: ollama
        ports:
        - name: ollama
          containerPort: 11434
        resources:
          limits:
            cpu: "12"
            memory: 64Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
            - CAP_NET_RAW
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/appuser/.ollama
          name: ollama
        - mountPath: /tmp
          name: tmp
      - command:
        - /home/appuser/run/run.sh
        image: ghcr.io/eumel8/ollama-chatbot/ollama:latest
        imagePullPolicy: Always
        name: ollama-crawler
        readinessProbe:
          exec:
            command:
            - "sh"
            - "-c"
            - "ollama list && echo 'Ollama ready' || 'Ollama NOT ready'"
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
            - CAP_NET_RAW
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/appuser/.ollama
          name: ollama
        - mountPath: /vectorstore
          name: vectorstore
        - mountPath: /tmp
          name: tmp
        - name: config-volume
          mountPath: /home/appuser/chatbot-config
        - name: run-crawler
          mountPath: /home/appuser/run
        - name: url-volume
          mountPath: /home/appuser/urls
      - command:
        - /home/appuser/run/run.sh
        image: ghcr.io/eumel8/ollama-chatbot/ollama:latest
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - "sh"
            - "-c"
            - "ollama list"
          failureThreshold: 10
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: ollama-chatbot
        ports:
        - name: ollama-chatbot
          containerPort: 9000
        readinessProbe:
          exec:
            command:
            - "sh"
            - "-c"
            - "test -f /vectorstore/crawl_readye && echo 'Crawler is ready' || echo 'Crawler is NOT ready'"
          failureThreshold: 90
          initialDelaySeconds: 90
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "12"
            memory: 64Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
            - CAP_NET_RAW
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/appuser/.ollama
          name: ollama
        - mountPath: /vectorstore
          name: vectorstore
        - mountPath: /tmp
          name: tmp
        - name: config-volume
          mountPath: /home/appuser/chatbot-config
        - name: run-ui
          mountPath: /home/appuser/run
        - name: url-volume
          mountPath: /home/appuser/urls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
        - 1000
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 1
      volumes:
      - name: config-volume
        configMap:
          name: ollama-chatbot
      - name: run-crawler
        configMap:
          defaultMode: 0755
          name: run-crawler
      - name: run-ui
        configMap:
          defaultMode: 0755
          name: run-ui
      - name: url-volume
        configMap:
          name: urls
      - emptyDir:
          medium: Memory
          sizeLimit: 32000Mi
        name: ollama
      - emptyDir:
          sizeLimit: 5000Mi
        name: vectorstore
      - emptyDir:
          medium: Memory
          sizeLimit: 500Mi
        name: tmp
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
