kubernetes/gitrepo.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: gitrepo
spec:
  selector:
    matchLabels:
      app: gitrepo
  replicas: 1
  template:
    metadata:
      labels:
        app: gitrepo
    spec:
      containers:
      - name: gitrepo
        image: ghcr.io/mcsps/nginx-non-root:1.0.3
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
            - CAP_NET_RAW
          privileged: false
          readOnlyRootFilesystem: false
          runAsGroup: 1000
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: gitrepo
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: gitrepo
          persistentVolumeClaim:
            claimName: gitrepo
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
        - 1000
---
---
kind: Service
apiVersion: v1
metadata:
  name: gitrepo
spec:
  selector:
    app: gitrepo
  ports:
    - port: 80
      targetPort: 8080
