kubernetes/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ollama-chatbot
spec:
  selector:
    app: ollama-chatbot
  ports:
    - name: ollama-chatbot
      port: 80
      targetPort: 9000
---
kind: Service
apiVersion: v1
metadata:
  name: ollama
spec:
  selector:
    app: ollama-chatbot
  ports:
    - name: ollama
      port: 11434
      targetPort: 11434
